--- a/.gitattributes
+++ b/.gitattributes
@@ -3894,6 +3894,7 @@ rtl/solaris/i386/sighndh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=na
 rtl/solaris/osdefs.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/solaris/osmacro.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/solaris/ostypes.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/solaris/pthread.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/solaris/ptypes.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/solaris/signal.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/solaris/sparc/sighnd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -3906,6 +3907,7 @@ rtl/solaris/system.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/solaris/termio.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/solaris/termios.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/solaris/termiosproc.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/solaris/tthread.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/solaris/unxconst.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/solaris/unxfunc.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/sparc/int64p.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
