--- a/.gitattributes
+++ b/.gitattributes
@@ -4833,6 +4833,8 @@ tests/test/cg/obj/darwin/powerpc/ctest.o svn_mime_002dtype=application%2Foctet-s
 tests/test/cg/obj/darwin/powerpc/tcext3.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/darwin/powerpc/tcext4.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/freebsd/i386/ctest.o svn_mime_002dtype=application%2Foctet-stream
+tests/test/cg/obj/freebsd/i386/tcext3.o svn_mime_002dtype=application%2Foctet-stream
+tests/test/cg/obj/freebsd/i386/tcext4.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/go32v2/i386/ctest.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/linux/arm/ctest.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/linux/i386/ctest.o svn_mime_002dtype=application%2Foctet-stream
