* crash test for automatic prefetching
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@2515 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -5107,6 +5107,7 @@ tests/test/tover2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tpackrec.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tpara1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tpara2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tpftch1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tprocext.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tprocvar1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tprocvar2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
