--- a/.gitattributes
+++ b/.gitattributes
@@ -3501,9 +3501,11 @@ rtl/linux/i386/syscallh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nat
 rtl/linux/i386/sysnr.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/ipccall.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/ipcsys.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/linux/linux.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/m68k/bsyscall.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/m68k/signal.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/m68k/stat.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/linux/oldlinux.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/osdefs.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/osmacro.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/ossysc.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
