--- a/.gitattributes
+++ b/.gitattributes
@@ -4990,6 +4990,7 @@ tests/test/opt/tgotoreg.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nati
 tests/test/opt/treg1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/opt/treg2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/opt/treg3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/opt/treg4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tabstrcl.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/talign.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/talign1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
