* ignore some files
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@2565 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /*.o
 /*.ppu
 /*.s
+/build-stamp.*
 compiler/*.bak
 compiler/*.exe
 compiler/*.o
@@ -479,6 +480,8 @@ installer/*.o
 installer/*.ppu
 installer/*.s
 installer/fpcmade.*
+installer/installer
+installer/installer.pas
 installer/units
 packages/*.bak
 packages/*.exe
@@ -498,6 +501,13 @@ packages/base/gdbint/*.ppu
 packages/base/gdbint/*.s
 packages/base/gdbint/fpcmade.*
 packages/base/gdbint/units
+packages/base/graph/*.bak
+packages/base/graph/*.exe
+packages/base/graph/*.o
+packages/base/graph/*.ppu
+packages/base/graph/*.s
+packages/base/graph/.gdbinit
+packages/base/graph/fpcmade.*
 packages/base/graph/inc/*.bak
 packages/base/graph/inc/*.exe
 packages/base/graph/inc/*.o
@@ -505,6 +515,7 @@ packages/base/graph/inc/*.ppu
 packages/base/graph/inc/*.s
 packages/base/graph/inc/fpcmade.*
 packages/base/graph/inc/units
+packages/base/graph/units
 packages/base/hash/*.bak
 packages/base/hash/*.exe
 packages/base/hash/*.o
@@ -608,6 +619,7 @@ packages/base/paszlib/*.exe
 packages/base/paszlib/*.o
 packages/base/paszlib/*.ppu
 packages/base/paszlib/*.s
+packages/base/paszlib/.gdbinit
 packages/base/paszlib/fpcmade.*
 packages/base/paszlib/units
 packages/base/postgres/*.bak
@@ -1008,6 +1020,14 @@ packages/extra/cdrom/*.ppu
 packages/extra/cdrom/*.s
 packages/extra/cdrom/fpcmade.*
 packages/extra/cdrom/units
+packages/extra/fftw/*.bak
+packages/extra/fftw/*.exe
+packages/extra/fftw/*.o
+packages/extra/fftw/*.ppu
+packages/extra/fftw/*.s
+packages/extra/fftw/.gdbinit
+packages/extra/fftw/fpcmade.*
+packages/extra/fftw/units
 packages/extra/forms/*.bak
 packages/extra/forms/*.exe
 packages/extra/forms/*.o
@@ -1020,6 +1040,7 @@ packages/extra/forms/demo/*.ppu
 packages/extra/forms/demo/*.s
 packages/extra/forms/demo/fpcmade.*
 packages/extra/forms/demo/units
+packages/extra/forms/fd2pascal
 packages/extra/forms/fpcmade.*
 packages/extra/forms/units
 packages/extra/fpcmade.*
@@ -1359,6 +1380,14 @@ packages/extra/gtk2/pango/*.s
 packages/extra/gtk2/pango/fpcmade.*
 packages/extra/gtk2/pango/units
 packages/extra/gtk2/units
+packages/extra/hermes/*.bak
+packages/extra/hermes/*.exe
+packages/extra/hermes/*.o
+packages/extra/hermes/*.ppu
+packages/extra/hermes/*.s
+packages/extra/hermes/.gdbinit
+packages/extra/hermes/fpcmade.*
+packages/extra/hermes/units
 packages/extra/imlib/*.bak
 packages/extra/imlib/*.exe
 packages/extra/imlib/*.o
@@ -1520,6 +1549,14 @@ packages/extra/palmunits/*.ppu
 packages/extra/palmunits/*.s
 packages/extra/palmunits/fpcmade.*
 packages/extra/palmunits/units
+packages/extra/ptc/*.bak
+packages/extra/ptc/*.exe
+packages/extra/ptc/*.o
+packages/extra/ptc/*.ppu
+packages/extra/ptc/*.s
+packages/extra/ptc/.gdbinit
+packages/extra/ptc/fpcmade.*
+packages/extra/ptc/units
 packages/extra/rexx/*.bak
 packages/extra/rexx/*.exe
 packages/extra/rexx/*.o
