--- a/.gitattributes
+++ b/.gitattributes
@@ -5200,6 +5200,8 @@ tests/test/units/system/tround.pp svn_mime_002dtype=text%2Fplain svn_eol_002dsty
 tests/test/units/system/tseg.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/system/tsetstr.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/system/tsetstr2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/units/system/tslice1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/units/system/tslice2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/system/tstring.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/system/ttrig.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/system/ttrunc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
