+ Moved obsolete DB-units to unmaintained
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@2660 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -616,18 +616,10 @@ fcl/db/dbase/tdbf_l.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/dbase/testdbf.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/dbconst.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/dbwhtml.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/ddg_ds.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/ddg_rec.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/dsparams.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/fields.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/interbase/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/interbase/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/interbase/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/interbase/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/interbase/interbase.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/interbase/testib.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/memds/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/memds/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/memds/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -637,29 +629,6 @@ fcl/db/memds/testcp.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/memds/testld.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/memds/testopen.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/memds/testpop.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/mysql/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/mysql/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/mysql/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/mysql/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/mysql/mtest.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/mysql/mysqldb3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/mysql/mysqldb4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/odbc/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/odbc/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/odbc/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/odbc/fpodbc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/odbc/testbcon.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/odbc/testcon.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/odbc/testdrcon.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/odbc/testenv.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/odbc/testfl.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/odbc/testodbc.mdb svn_mime_002dtype=application%2Foctet-stream
-fcl/db/odbc/testpa.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/odbc/testpk.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/odbc/testpr.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/odbc/testsql.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/odbc/testst.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/odbc/testtl.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sdf/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sdf/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sdf/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -716,15 +685,46 @@ fcl/db/sqlite/fillds.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqlite/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqlite/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqlite/sqlite3ds.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/sqlite/sqlitedataset.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqlite/sqliteds.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqlite/testds.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/tests/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/tests/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/tests/createds.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/tests/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/tests/testds.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/db/tests/tested.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/interbase/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/interbase/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/interbase/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/interbase/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/interbase/interbase.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/interbase/testib.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/mysql/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/mysql/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/mysql/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/mysql/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/mysql/mtest.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/mysql/mysqldb3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/mysql/mysqldb4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/odbc/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/odbc/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/odbc/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/odbc/fpodbc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/odbc/testbcon.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/odbc/testcon.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/odbc/testdrcon.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/odbc/testenv.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/odbc/testfl.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/odbc/testodbc.mdb svn_mime_002dtype=application%2Foctet-stream
+fcl/db/unmaintained/odbc/testpa.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/odbc/testpk.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/odbc/testpr.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/odbc/testsql.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/odbc/testst.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/odbc/testtl.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/sqlite/sqlitedataset.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/tests/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/tests/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/tests/createds.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/tests/ddg_ds.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/tests/ddg_rec.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/tests/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/tests/testds.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/unmaintained/tests/tested.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/fpcunit/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/fpcunit/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/fpcunit/README.txt svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
