--- a/.gitignore
+++ b/.gitignore
@@ -169,13 +169,6 @@ fcl/db/dbase/*.s
 fcl/db/dbase/fpcmade.*
 fcl/db/dbase/units
 fcl/db/fpcmade.*
-fcl/db/interbase/*.bak
-fcl/db/interbase/*.exe
-fcl/db/interbase/*.o
-fcl/db/interbase/*.ppu
-fcl/db/interbase/*.s
-fcl/db/interbase/fpcmade.*
-fcl/db/interbase/units
 fcl/db/memds/*.bak
 fcl/db/memds/*.exe
 fcl/db/memds/*.o
@@ -183,20 +176,6 @@ fcl/db/memds/*.ppu
 fcl/db/memds/*.s
 fcl/db/memds/fpcmade.*
 fcl/db/memds/units
-fcl/db/mysql/*.bak
-fcl/db/mysql/*.exe
-fcl/db/mysql/*.o
-fcl/db/mysql/*.ppu
-fcl/db/mysql/*.s
-fcl/db/mysql/fpcmade.*
-fcl/db/mysql/units
-fcl/db/odbc/*.bak
-fcl/db/odbc/*.exe
-fcl/db/odbc/*.o
-fcl/db/odbc/*.ppu
-fcl/db/odbc/*.s
-fcl/db/odbc/fpcmade.*
-fcl/db/odbc/units
 fcl/db/sdf/*.bak
 fcl/db/sdf/*.exe
 fcl/db/sdf/*.o
@@ -239,14 +218,35 @@ fcl/db/sqlite/*.ppu
 fcl/db/sqlite/*.s
 fcl/db/sqlite/fpcmade.*
 fcl/db/sqlite/units
-fcl/db/tests/*.bak
-fcl/db/tests/*.exe
-fcl/db/tests/*.o
-fcl/db/tests/*.ppu
-fcl/db/tests/*.s
-fcl/db/tests/fpcmade.*
-fcl/db/tests/units
 fcl/db/units
+fcl/db/unmaintained/interbase/*.bak
+fcl/db/unmaintained/interbase/*.exe
+fcl/db/unmaintained/interbase/*.o
+fcl/db/unmaintained/interbase/*.ppu
+fcl/db/unmaintained/interbase/*.s
+fcl/db/unmaintained/interbase/fpcmade.*
+fcl/db/unmaintained/interbase/units
+fcl/db/unmaintained/mysql/*.bak
+fcl/db/unmaintained/mysql/*.exe
+fcl/db/unmaintained/mysql/*.o
+fcl/db/unmaintained/mysql/*.ppu
+fcl/db/unmaintained/mysql/*.s
+fcl/db/unmaintained/mysql/fpcmade.*
+fcl/db/unmaintained/mysql/units
+fcl/db/unmaintained/odbc/*.bak
+fcl/db/unmaintained/odbc/*.exe
+fcl/db/unmaintained/odbc/*.o
+fcl/db/unmaintained/odbc/*.ppu
+fcl/db/unmaintained/odbc/*.s
+fcl/db/unmaintained/odbc/fpcmade.*
+fcl/db/unmaintained/odbc/units
+fcl/db/unmaintained/tests/*.bak
+fcl/db/unmaintained/tests/*.exe
+fcl/db/unmaintained/tests/*.o
+fcl/db/unmaintained/tests/*.ppu
+fcl/db/unmaintained/tests/*.s
+fcl/db/unmaintained/tests/fpcmade.*
+fcl/db/unmaintained/tests/units
 fcl/emx/*.bak
 fcl/emx/*.exe
 fcl/emx/*.o
