+ problem when passing a typecasted class instance to a var parameter     with -CR
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@2741 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -5109,6 +5109,7 @@ tests/test/trange2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/trange3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/trange4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/trange5.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/trangeob.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tresstr.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/trtti1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/trtti2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
