Initialized merge tracking via "svnmerge" with revisions "1-2668" from svn+ssh://peter@www.freepascal.org/FPC/svn/fpc/branches/linker/compiler
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@2765 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 /Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 /Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+/compiler svnc_svnmerge_002dintegrated
 compiler/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/aasmbase.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
